update some css for dark mode. and fix something wrong.

--- a/src/components/Pages/styles.css
+++ b/src/components/Pages/styles.css
@@ -1,3 +1,8 @@
+.page-heading{
+    color: var(--pink);
+}
+
+
 .coin-detail-container{
     margin: 30px;
 }
